; ModuleID = '/home/carl/AnghaBench/lede/target/linux/oxnas/files/drivers/pci/host/extr_pcie-oxnas.c_set_out_lanes.c'
source_filename = "/home/carl/AnghaBench/lede/target/linux/oxnas/files/drivers/pci/host/extr_pcie-oxnas.c_set_out_lanes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.oxnas_pcie = type { i64, i32 }

@PCIE_AHB_SLAVE_CTRL = common dso_local global i64 0, align 8
@PCIE_SLAVE_BE_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.oxnas_pcie*, i32)* @set_out_lanes to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_out_lanes(%struct.oxnas_pcie* %0, i32 %1) #0 {
  %3 = alloca %struct.oxnas_pcie*, align 8
  %4 = alloca i32, align 4
  store %struct.oxnas_pcie* %0, %struct.oxnas_pcie** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.oxnas_pcie*, %struct.oxnas_pcie** %3, align 8
  %6 = getelementptr inbounds %struct.oxnas_pcie, %struct.oxnas_pcie* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 8
  %8 = load %struct.oxnas_pcie*, %struct.oxnas_pcie** %3, align 8
  %9 = getelementptr inbounds %struct.oxnas_pcie, %struct.oxnas_pcie* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* @PCIE_AHB_SLAVE_CTRL, align 8
  %12 = add nsw i64 %10, %11
  %13 = load i32, i32* @PCIE_SLAVE_BE_MASK, align 4
  %14 = load i32, i32* %4, align 4
  %15 = call i32 @PCIE_SLAVE_BE(i32 %14)
  %16 = call i32 @regmap_update_bits(i32 %7, i64 %12, i32 %13, i32 %15)
  %17 = call i32 (...) @wmb()
  ret void
}

declare dso_local i32 @regmap_update_bits(i32, i64, i32, i32) #1

declare dso_local i32 @PCIE_SLAVE_BE(i32) #1

declare dso_local i32 @wmb(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
